# alertr

./: .gitignore  Dockerfile  LICENSE  README.md  create_favicons.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
docs/images/: README.md
homelab_storage_monitor/: __init__.py  cli.py  config.py  db.py  models.py  runner.py  smart_attrs.py  state.py
homelab_storage_monitor/alerts/: __init__.py  email.py  slack.py
homelab_storage_monitor/checks/: __init__.py  base.py  filesystem.py  journal.py  lvm.py  smart.py
homelab_storage_monitor/web/: __init__.py  app.py
homelab_storage_monitor/web/static/: style.css
homelab_storage_monitor/web/templates/: base.html  events.html  filesystem.html  lvm.html  overview.html  smart.html
tests/: __init__.py  test_config.py  test_journal.py  test_lvm.py  test_models.py  test_smart.py
utils/: create_hero_image.py
