[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-storage-monitor"
version = "1.0.0"
description = "Monitoring and alerting for homelab disk arrays"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Homelab Storage Monitor Contributors" }
]
keywords = ["monitoring", "storage", "raid", "smart", "homelab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: Free for non-commercial use",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31.0",
]

[project.scripts]
hsm = "homelab_storage_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/alertr/homelab-storage-monitor"
Repository = "https://github.com/alertr/homelab-storage-monitor"

[tool.hatch.build.targets.wheel]
packages = ["homelab_storage_monitor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=homelab_storage_monitor --cov-report=term-missing"
